kubernetes/apps/flux-system/flux-instance/app/github/webhook/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - flux-webhook.${domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
